deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coverage-deployment
  namespace: xnova-core
spec:
  selector:
    matchLabels:
      app: coverage
  replicas: 1
  template:
    metadata:
      labels:
        app: coverage
    spec:
      nodeSelector:
        cloud.google.com/compute-class: pool
      imagePullSecrets:
        - name: ecr-pull-secret
      containers:
        - name: coverage
          image: DOCKER_IMAGE
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: coverage-service
  namespace: xnova-core
spec:
  type: ClusterIP
  selector:
    app: coverage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coverage-ingress
  namespace: apisix
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  tls:
    - secretName: xnovainternational.com-tls-secret
      hosts:
        - coverage.xnovainternational.com
  rules:
    - host: coverage.xnovainternational.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: apisix-gateway
                port:
                  number: 80
